[tool.poetry]
name = "xcsv"
version = "0.2.0"
description = "Package for working with extended CSV (XCSV) files"
authors = ["Paul Breen <pbree@bas.ac.uk>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/paul-breen/xcsv"
homepage = "https://github.com/paul-breen/xcsv"
documentation = "https://github.com/paul-breen/xcsv/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
